<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Menu.HomeActivity"
    >
    <item
        android:id="@+id/action_share"
        android:title="@string/compartilhar"
        android:orderInCategory="100"
        android:onClick="onClickMenuLateral"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_evaluate"
        android:title="@string/avaliar"
        android:orderInCategory="200"
        android:onClick="onClickMenuLateral"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/sobre"
        android:orderInCategory="200"
        android:onClick="onClickMenuLateral"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sinc"
        android:title="@string/sinc_manual"
        android:orderInCategory="200"
        android:onClick="onClickMenuLateral"
        app:showAsAction="never" />
    <!--
    <item
        android:id="@+id/action_tabelas"
        android:title="Tabelas"
        android:visible="true"
        android:orderInCategory="200"
        android:onClick="onClickMenuLateral"
        app:showAsAction="never" />
        -->

    <item
        android:id="@+id/action_logoff"
        android:title="@string/sair"
        android:orderInCategory="200"
        android:onClick="onClickMenuLateral"
        app:showAsAction="never" />
</menu>