<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/dialog_nova_avaliacao_nome_avaliacao"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/ed_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="199"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/dialog_nova_avaliacao_data_avaliacao"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_dia_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/formato_data_ddmmaaaa"
                android:textSize="15dp"
                android:paddingBottom="5dp"/>

            <View
                android:layout_width="90dp"
                android:layout_height="1dp"
                android:background="@color/cinza_escuro"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:padding="10dp"
            android:text="@string/dialog_nova_avaliacao_bimestre"/>

        <TextView
            android:id="@+id/tv_bimestre_atual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="15dp"
            android:padding="10dp"
            android:text="@string/dialog_nova_avaliacao_tipo_avaliacao"/>

        <Spinner
            android:id="@+id/spTipo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:entries="@array/tiposAtividades"

            />

        <Spinner
            android:id="@+id/spDisciplina"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:entries="@array/tiposDisciplinas"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/dialog_nova_avaliacao_vale_nota"
            android:textSize="15dp"
            />

        <CheckBox
            android:id="@+id/ckVale"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            />

    </LinearLayout>

</LinearLayout>