<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".Login.LoginActivity">
    <ImageView
        android:id="@+id/iv_logo"
        android:padding="20dp"
        android:layout_height="wrap_content"
        android:layout_width="368dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/content_desc_logo_main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_usuario"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:ems="10"
        android:hint="@string/hintusuario"
        android:inputType="text"
        android:maxLines="1"
        android:background="@drawable/editlogin"
        app:layout_constrainedWidth="true"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_senha"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:maxLines="1"
        android:ems="10"
        android:hint="@string/hintsenha"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:background="@drawable/editlogin"
        app:layout_constrainedWidth="true"
        app:layout_constraintTop_toBottomOf="@+id/et_usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btlogar"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:padding="12dp"
        android:background="@drawable/button_blue"
        android:onClick="conferirConexao"
        android:text="@string/lbtlogar"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_senha"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressbar"
        android:visibility="invisible"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btlogar" />

</android.support.constraint.ConstraintLayout>
