<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/homeContainer"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@color/cinza_indice"
android:elevation="1dp"
    >

<include
    android:id="@+id/toolbar"
    layout="@layout/toolbar" />

<FrameLayout
    android:id="@+id/container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_metade_arredondado"
    android:elevation="5dp"
    android:visibility="invisible"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar">

</FrameLayout>

<ImageView
    android:id="@+id/imageView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:elevation="3dp"
    android:src="@drawable/ic_person"
    app:layout_constraintBottom_toBottomOf="@+id/txt_nomeUsuario"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/txt_nomeUsuario" />

<TextView
    android:id="@+id/txt_nomeUsuario"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:ellipsize="end"
    android:gravity="center"
    android:maxLines="1"
    android:textAlignment="center"
    android:textSize="17dp"
    android:padding="10dp"
    android:elevation="2dp"
    android:textColor="@color/black"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar" />

<Button
    android:id="@+id/bt_sincronizar"
    android:layout_width="wrap_content"
    android:layout_height="40dp"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:background="@drawable/button_green"
    android:elevation="2dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:text="SINCRONIZAR"
    android:textColor="@color/white"
    android:textSize="17sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toTopOf="@+id/tv_carteirinha"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txt_nomeUsuario" />

<TextView
    android:id="@+id/tv_carteirinha"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/button_blue"
    android:drawableLeft="@drawable/ic_carteirinha"
    android:elevation="2dp"
    android:gravity="center"
    android:onClick="onClickMenuPrincipal"
    android:paddingLeft="20dp"
    android:text="Carteirinha"
    android:textColor="@color/white"
    android:textSize="17dp"
    android:textStyle="bold"
    app:layout_constraintBottom_toTopOf="@+id/tv_turmas"
    app:layout_constraintEnd_toStartOf="@+id/tv_fechamento"
    app:layout_constraintStart_toStartOf="parent" />

<TextView
    android:id="@+id/tv_turmas"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    android:layout_weight="1"
    android:background="@drawable/button_blue"
    android:drawableLeft="@drawable/ic_turmas"
    android:gravity="center"
    android:onClick="onClickMenuPrincipal"
    android:paddingLeft="20dp"
    android:text="@string/turmas"
    android:textColor="@color/white"
    android:textSize="17dp"
    android:textStyle="bold"
    android:elevation="2dp"
    app:layout_constraintBottom_toTopOf="@+id/tv_frequencia"
    app:layout_constraintEnd_toStartOf="@+id/tv_fechamento"
    app:layout_constraintStart_toStartOf="parent" />

<TextView
    android:id="@+id/tv_registroAula"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/button_blue"
    android:textColor="@color/white"
    android:drawableLeft="@drawable/ic_planejamento"
    android:gravity="center"
    android:onClick="onClickMenuPrincipal"
    android:paddingLeft="20dp"
    android:text="@string/registro_aulas"
    android:textSize="17dp"
    android:textStyle="bold"
    android:elevation="2dp"
    app:layout_constraintBottom_toTopOf="@+id/tv_avaliacao"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

<TextView
    android:id="@+id/tv_frequencia"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/button_blue"
    android:drawableLeft="@drawable/ic_frequencia"
    android:gravity="center"
    android:onClick="onClickMenuPrincipal"
    android:paddingLeft="20dp"
    android:text="@string/frequencia"
    android:textColor="@color/white"
    android:textSize="17dp"
    android:textStyle="bold"
    android:elevation="2dp"
    app:layout_constraintBottom_toTopOf="@+id/tv_registroAula"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

<TextView
    android:id="@+id/tv_avaliacao"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/button_blue"
    android:drawableLeft="@drawable/ic_avaliacao"
    android:gravity="center"
    android:onClick="onClickMenuPrincipal"
    android:paddingLeft="20dp"
    android:text="@string/avaliacao"
    android:textSize="17dp"
    android:textStyle="bold"
    android:textColor="@color/white"
    android:elevation="2dp"
    app:layout_constraintBottom_toTopOf="@+id/tv_fechamento"
    app:layout_constraintEnd_toEndOf="@+id/tv_registroAula"
    app:layout_constraintStart_toStartOf="parent" />

<TextView
    android:id="@+id/tv_fechamento"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/button_blue"
    android:drawableLeft="@drawable/ic_fechamento2"
    android:gravity="center"
    android:onClick="onClickMenuPrincipal"
    android:paddingLeft="20dp"
    android:text="@string/fechamento"
    android:textSize="17dp"
    android:textStyle="bold"
    android:textColor="@color/white"
    android:elevation="2dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>